# Techno_C_HW_2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml
include/: func_calculation.h
src/: CMakeLists.txt  direct_calculation.c  func_calculation.c  main.c  parallel_calculation.c
tests/: CMakeLists.txt  test.cpp
